--- a/assets/package.json
+++ b/assets/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
     "esbuild": "^0.17.6",
     "postcss-import": "^15.1.0",
